--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 					<button id="etherealChanceButton" class="uncheckedButton">Less random Ethereal!</button>
 					<button id="bestUpgradesButton">Best upgrades!</button>
 					<button id="bestDowngradesButton">Best downgrades!</button>
+					<button id="bestRingModsButton">Best ring mods</button>
 					<button id="theoreticalWin">Max luck!</button>
 				</div>
 				<div id="calcResults">
